Updated resume.html to match latest resume

--- a/resume.html
+++ b/resume.html
@@ -20,6 +20,7 @@
         <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
+        <!-- TODO: Update resume information with all resume versions -->
         <section class="container">
             <div class="page-header">
                 <h1>Resume</h1>
@@ -27,7 +28,6 @@
                     <span class="glyphicon glyphicon-file"></span> View PDF
                 </a>
             </div>
-
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </div>
-
+            <!-- EDUCATION -->
             <div class="row">
                 <div class="col-sm-3">
                     <h3>EDUCATION</h3>
@@ -57,24 +57,136 @@
                     <em>August 2017</em>
                 </div>
             </div>
-        </div>
-
+            </div>
+            <!-- CERTIFICATIONS -->
+            <div class="row">
+                <div class="col-sm-3">
+                    <h3>CERTIFICATIONS</h3>
+                </div>
+                <div class="col-sm-7">
+                    <div class="inner-text">
+                        Certified Scrum Master <strong>(CSM)</strong><br />
+                        Certified Scrum Product Owner <strong>(CSPO)</strong><br />
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="inner-text">
+                        <em>January 2020</em><br />
+                        <em>January 2020</em>
+                    </div>
+                </div>
+            </div>
+            <!-- WORK EXPERIENCE -->
+            <div class="row top-row">
+                <div class="col-sm-3">
+                    <!-- TODO: Define work.html page -->
+                    <h3><a class="discrete-links" href="./work.html">WORK EXPERIENCE</a></h3>
+                </div>
+                <div class="col-sm-7">
+                    <div class="inner-text">
+                        <!-- TODO: Define the iRobot work page -->
+                        <a class="discrete-links" href="./work/irobot.html">
+                            <strong>Software Engineer</strong>
+                        </a> at iRobot<br />
+                        <em>Robot Simulator Specialist</em>
+                        <ul>
+                            <li>Supported uptime of simulated robots in AWS Robomaker running 50 mission hours every
+                                day</li>
+                            <li>Enhanced automatic log extraction to evaluate simulated robot performance for every
+                                robot cleaning mission and auto-populate online reports through SQL queries</li>
+                            <li>Reviewed contributions to 3 different code repositories in C++, ROS, and Python</li>
+                            <li>Supported Scrum policy changes to improve feature reporting and delivery</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="inner-text">
+                        <br />
+                        <em>November 2019 - March 2020</em>
+                    </div>
+                </div>
+            </div>
+            <div class="row middle-row">
+                <div class="col-sm-offset-3 col-sm-7">
+                    <div class="inner-text">
+                        <em>Automation Infrastructure Developer</em>
+                        <ul>
+                            <li>Architected new company-wide Python automation for robot software testing</li>
+                            <li>Automated robot log file evaluation, reducing manual log review time by 5
+                                hours/week</li>
+                            <li>Reduced manual testing time by 30% through weekly 1:1 training sessions</li>
+                            <li>Collaborated with an 8-person team to deliver new software features every 3 weeks</li>
+                            <li>Pioneered 466 code standards (Pylint) and distributing code documentation (Sphinx)</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="inner-text">
+                        <em>February 2019 - November 2019</em>
+                    </div>
+                </div>
+            </div>
+            <div class="row middle-row">
+                <div class="col-sm-offset-3 col-sm-7">
+                    <div class="inner-text">
+                        <em>Product Delivery QA</em>
+                        <ul>
+                            <li>Designed 40% of manual test plan for next-gen autonomous cleaning robot software</li>
+                            <li>Assisted factory operations in quality assurance for release of the Braava Jet m6
+                                robot</li>
+                            <li>Authored first comprehensive documentation of terms and acronyms used at iRobot</li>
+                            <li>Mentored an undergraduate intern for 3 months validating new product delivery features
+                                and development of Linux process monitoring system for new automation</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="inner-text">
+                        <em>November 2017 – February 2019</em>
+                    </div>
+                </div>
+            </div>
+            <div class="row bottom-row">
+                <div class="col-sm-offset-3 col-sm-7">
+                    <div class="inner-text">
+                        <strong><a class="discrete-links" href="./work/student-life.html#community-advisor">Community
+                            Advisor</a></strong> - Carnegie Mellon University
+                        <ul>
+                            <li>Ensured safety and security of 261 residents living in apartment-style living</li>
+                            <li>Planned and faciliated weekly staff meetings for 8 resident assistants and professional
+                                Housefellow supervisor</li>
+                            <li>Managed an $8000 yearly budget for educational programs in professional development,
+                                health/wellness, environmentalism, and diversity/inclusion</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="inner-text timeframe">
+                        <em>Jan 2016 - May 2017</em>
+                    </div>
+                </div>
+            </div>
+            <!-- PROJECTS -->
             <div class="row top-row">
                 <div class="col-sm-3">
                     <h3><a class="discrete-links" href="./projects.html">PROJECTS</a></h3>
                 </div>
                 <div class="col-sm-7">
                     <div class="inner-text">
-                        <strong><a class="discrete-links" href="./projects/music-tech-capstone.html">Depth-Controlled Ambisonic Audio</a></strong> (Music and Technology Final Project)
+                        <strong><a class="discrete-links" href="./projects/music-tech-capstone.html">Depth-Controlled
+                            Ambisonic Audio</a></strong> (Music and Technology Final Project)
                         <ul>
-                            <li>Designed a system that tracks the user's body to control high order ambisonic audio in a 360&deg; speaker ring</li>
-                            <li>Uses Kinect sensor, software packages for MaxMSP, and TouchOSC design</li>
+                            <li>Interfaced with Microsoft Kinect sensor to track user movements in a 360° speaker
+                                ring</li>
+                            <li>Relayed these movements through MaxMSP to 2<sup>nd</sup> order ambisonic audio
+                                processing</li>
+                            <li>Replicated a 3D auditory experience by decoding signals for an 8-channel output</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-2">
                     <div class="inner-text">
-                        <em>Summer 2017</em>
+                        <em>May 2017 – August 2017</em>
                     </div>
                 </div>
             </div>
@@ -97,6 +209,7 @@
             <div class="row bottom-row">
                 <div class="col-sm-offset-3 col-sm-7">
                     <div class="inner-text">
+                        <!-- TODO: Define embedded project page -->
                         <strong><a class="discrete-links" href="#embedded-project-link">Embedded Real-Time Operating System</a></strong> (18-349 Final Class Project)
                         <ul>
                             <li>Implemented real-time operating system running a Linux kernel on a Raspberry Pi 3</li>
@@ -110,7 +223,7 @@
                     </div>
                 </div>
             </div>
-
+            <!-- RESEARCH -->
             <div class="row top-row">
                 <div class="col-sm-3">
                     <h3>RESEARCH</h3>
@@ -135,80 +248,66 @@
                     <div class="inner-text">
                         <strong><a class="discrete-links" href="./projects/hybrid-instruments.html">Hybrid Instruments</a></strong> - Carnegie Mellon University
                         <ul>
-                            <li>Implemented and tested a microphone pre-amp circuit board with a contact microphone on a 3D printed phone case with a portable violin's bow attached</li>
-                            <li>Verified performance through use for oscilloscope, audio systems, and self-written mobile software in conjunction with hardware readings</li>
+                            <li>Engineered pre-amplifiers for contact microphones with PCBs designed in EAGLE</li>
+                            <li>Evaluated performance on 3D printed phone cases with string bows attached</li>
+                            <li>Characterized analog signal measurement with mobile app development for QA</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-2">
                     <div class="inner-text">
-                        <em>Summer 2016</em>
+                        <em>May 2016 – August 2016</em>
                     </div>
                 </div>
             </div>
-
+            <!-- RELEVANT SKILLS -->
             <div class="row">
                 <div class="col-sm-3">
-                    <h3>WORK EXPERIENCE</h3>
-                </div>
-                <div class="col-sm-7">
-                    <div class="inner-text">
-                        <strong><a class="discrete-links" href="./work/student-life.html#community-advisor">Community Advisor</a></strong> - Carnegie Mellon University
-                        <ul>
-                            <li>Ensured safety and security of 261 residents living in apartment-style living</li>
-                            <li>Planned and faciliated weekly staff meetings for 8 resident assistants and professional Housefellow supervisor</li>
-                            <li>Managed an $8000 yearly budget for educational programs in professional development, health/wellness, environmentalism, and diversity/inclusion</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-2">
-                    <div class="inner-text timeframe">
-                        <em>Jan 2016 - May 2017</em>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-3">
-                    <h3>SKILLS</h3>
+                    <h3>RELEVANT SKILLS</h3>
                 </div>
                 <div class="col-sm-9">
                     <div class="inner-text">
-                        <strong>Technical:</strong> Python, C/C++, MATLAB, Simulink, Android (Java), Assembly, EAGLE, Arduino, Verilog<br />
-                        <strong>Creative:</strong> Pro Tools, MaxMSP, TouchOSC, Ableton Live, Kontakt, HTML, CSS, Javascript, jQuery<br />
-                        <strong>Tools:</strong> Git, Bash, UNIX, Microsoft Office, G Suite
+                        <strong><u>Technologies:</u></strong> Python, C/C++, Bash, MaxMSP, SQL (Presto)<br />
+                        <strong><u>Interfaces:</u></strong> MATLAB, EAGLE, ROS, Pytest, OSC<br />
+                        <strong><u>Tools:</u></strong> Git, Pylint, Regex, Sphinx, JIRA<br />
+                        <strong><u>Audio:</u></strong> Ableton Live, Pro Tools, Audacity, MuseScore, Reason
                     </div>
                 </div>
             </div>
-
+            <!-- COURSEWORK -->
             <div class="row">
                 <div class="col-sm-3">
                     <h3>COURSEWORK</h3>
                 </div>
-                <div class="col-sm-5">
+                <div class="col-sm-9">
                     <div class="inner-text">
-                        <u>18-491:</u> Fundamentals of Signal Processing<br />
-                        <u>15-323:</u> Computer Music Systems and Info Processing<br />
-                        <u>57-347:</u> Electronic and Computer Music<br />
-                        <u>18-240:</u> Structure and Design of Digital Systems
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="inner-text">
-                        <u>18-349:</u> Embedded Real-Time Systems<br />
-                        <u>18-493:</u> Electroacoustics<br />
-                        <u>57-338:</u> Sound Editing and Mastering<br />
-                        <u>18-370:</u> Fundamentals of Control
+                        For the Georgia Tech OMSCS Program:
+                        <ul>
+                            <li><strong>CS8803-O01:</strong> Artificial Intelligence for Robotics</li>
+                        </ul>
+                        For Carnegie Mellon University Bachelor's Degrees:
+                        <ul>
+                            <li><strong>15-323:</strong> Computer Music Systems and Information Processing</li>
+                            <li><strong>18-240:</strong> Structure and Design of Digital Systems</li>
+                            <li><strong>18-349:</strong> Embedded Real-Time Systems</li>
+                            <li><strong>18-370:</strong> Fundamentals of Control</li>
+                            <li><strong>18-491:</strong> Fundamentals of Signal Processing</li>
+                            <li><strong>18-493:</strong> Electroacoustics</li>
+                            <li><strong>18-551:</strong> Signal Processing Systems Design</li>
+                            <li><strong>57-338:</strong> Sound Editing and Mastering</li>
+                            <li><strong>57-347:</strong> Electronic and Computer Music</li>
+                        </ul>
                     </div>
                 </div>
             </div>
-
+            <!-- LEADERSHIP POSITIONS -->
             <div class="row top-row">
                 <div class="col-sm-3">
                     <h3>LEADERSHIP POSITIONS</h3>
                 </div>
                 <div class="col-sm-7">
                     <div class="inner-text">
+                        <!-- TODO: Define DS page -->
                         <strong><a class="discrete-links" href="#DS-link">Director - Dancers' Symposium</a></strong>
                         <ul>
                             <li>Coordinated schedules for 130 dancers by reforming algorithms, designing code, and connecting third-party scheduler APIs for 300% effciency increase</li>
@@ -223,10 +322,10 @@
                     </div>
                 </div>
             </div>
-
             <div class="row bottom-row">
                 <div class="col-sm-offset-3 col-sm-7">
                     <div class="inner-text">
+                        <!-- TODO: Define Deewane page -->
                         <!-- Deewane link: "https://www.youtube.com/watch?v=cnUSNFpU7Kw" -->
                         <strong><a class="discrete-links" href="#deewane-link">Music Director - Deewane a Cappella</a></strong>
                         <ul>
@@ -243,10 +342,9 @@
                 </div>
             </div>
         </section>
-
         <footer class="container">
             <div class="row">
-                <p class="col-sm-4">&copy; 2019 David Alexander Buzzell</p>
+                <p class="col-sm-4">&copy; 2020 David Alexander Buzzell</p>
             </div>
         </footer>
 
