Tryna be compliant with HTML5 closing tag and validation services

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     </head>
     <body>
         <nav class="navbar">
-            <section class="container">
-                <!-- Just to create some header row space -->
-            </section>
+            <!-- Just to create some header row space -->
         </nav>
         <section class="container">
             <div class="jumbotron">
@@ -57,9 +55,9 @@
                             <div class="overlay">
                                 <div class="homeimg-text">
                                     <p>
-                                        <br />
-                                        <br />
-                                        Online Resume Website:<br />
+                                        <br>
+                                        <br>
+                                        Online Resume Website:<br>
                                         David A. Buzzell
                                     </p>
                                 </div>
@@ -74,10 +72,10 @@
                             <div class="overlay">
                                 <div class="homeimg-text">
                                     <p>
-                                        <br />
-                                        <br />
-                                        Love is Dead:<br />
-                                        Five Stages of Grief<br />
+                                        <br>
+                                        <br>
+                                        Love is Dead:<br>
+                                        Five Stages of Grief<br>
                                         Production Blog
                                     </p>
                                 </div>
