--- a/projects/ece-capstone.html
+++ b/projects/ece-capstone.html
@@ -51,8 +51,8 @@
                         use signal processing and/or pattern recognition in its solution. Our project used point capture technology
                         to obtain depth points for real world objects, and then process them to create 3D mesh models inside a virtual
                         environment. This project used Nearest Neighbor Filtering, Multiple Viewpoint Registration, Euclidean Clustering
-                        for Segmentation, and Fast Triangulation Meshing.<br />
-                        <br />
+                        for Segmentation, and Fast Triangulation Meshing.<br>
+                        <br>
                         Below is our presentation materials, including the
                         <strong><a href="../documents/resume-website/final-report.pdf">Final Report</a></strong>,
                         <strong><a href="../documents/resume-website/final-project-presentation.pdf">Final Presentation</a></strong>, and
