--- a/projects/hybrid-instruments.html
+++ b/projects/hybrid-instruments.html
@@ -52,8 +52,8 @@
                         a 3D printed phone case with a portable verison of a musical instrument (our tests replicated a violin's bow)
                         and a contact microphone, attach it to a mic pre-amp circuit to bring the signal up to line level for the phone
                         to receive and record with custom software. While involved with all facets of the project, my main task was to
-                        build the mic pre-amp circuitry, starting from breadboard prototyping to final PCB circuit.<br />
-                        <br />
+                        build the mic pre-amp circuitry, starting from breadboard prototyping to final PCB circuit.<br>
+                        <br>
                         Most of these files are described in a
                         <strong><a href="https://github.com/xhamyd/HybridInstruments">Github repo</a></strong> linked below.
                     </p>
