--- a/projects/music-generation-tool.html
+++ b/projects/music-generation-tool.html
@@ -48,8 +48,8 @@
                     <p class="project-text">
                         My Intro to Programming Final Project is one of my earliest projects that explored the intersection between music and technology.
                         This tool accepts user input through a graphical piano keyboard, and then takes the musical measure of input and
-                        implements recursive backtracking to randomly generate the remaining measures of music to play back to you.<br />
-                        <br />
+                        implements recursive backtracking to randomly generate the remaining measures of music to play back to you.<br>
+                        <br>
                         Below is a link to the
                         <strong><a href="https://github.com/xhamyd/term-project">Github repo</a></strong> that details each part of this project,
                         including code files, documentation, timesheet of hours spent on each part, and how to setup and run the project. Next to that
