--- a/projects/music-tech-capstone.html
+++ b/projects/music-tech-capstone.html
@@ -49,8 +49,8 @@
                         For my Music and Technology degree, I completed an individual "Capstone-like" project that combined
                         music with technology. This project is a system that incorporates depth-tracking and ambisonic audio to allow
                         the user to accurately control an audio source's origin and intensity in a circular plane, as produced by a 360&deg;
-                        speaker ring.<br />
-                        <br />
+                        speaker ring.<br>
+                        <br>
                         Below is a link to the materials used in the presentation of this project, including a
                         <strong><a href="../documents/resume-website/music-technology-project-writeup.pdf">Project Writeup (PDF)</a></strong> and
                         <strong><a href="https://www.youtube.com/watch?v=XfvVWxyaobQ">Video Demonstration</a></strong>
