--- a/projects/non-contact-eeg.html
+++ b/projects/non-contact-eeg.html
@@ -50,15 +50,15 @@
                         The team I joined in particular was focused on designing new electrodes (the contact points on the user's head) that were
                         "wireless". Current electrode designs on the market are usually either dry (direct metal contacts that poke at the user's scalp)
                         or wet (conductive gel is lubricated onto the user's scalp and the metal electrodes), which are painful, sticky, or
-                        otherwise uncomfortable for hours of data recording.<br />
-                        <br />
+                        otherwise uncomfortable for hours of data recording.<br>
+                        <br>
                         The "wireless" electrode design is a flat, conductive device (similar in size to a U.S. quarter coin) that is placed on the
                         user's head on top of their hair, which is a much more comfortable experience and easier to set up. Since there is no direct
                         contact between the electrode and the scalp, this electrode "wirelessly" records the user's brainwave activity using an
                         ultra-high impedance amplifier for strong capacitative coupling. From there, the electrode sends the voltage levels (after
                         some noise rejection and analog-to-digital conversion) to a host microcontroller that reports the data in a graphical program,
-                        allowing researchers to test for brainwave patterns and health issues.<br />
-                        <br />
+                        allowing researchers to test for brainwave patterns and health issues.<br>
+                        <br>
                         Below are links to some of the diagrams and findings for this project. This includes the
                         <strong><a href="../documents/resume-website/design-presentation.pdf">Design Presentation</a></strong> used for our large team meetings, the
                         <strong><a href="../documents/resume-website/shopping-list-for-lab-meeting-presentation.pdf">Parts Presentation</a></strong> that details exactly the components required for our proposed system, and the
@@ -147,7 +147,7 @@
                             <div class="carousel-caption">
                                 <h3>Split Electrode Design - Doughnut</h3>
                                 <p>
-                                    Cross-sectional (left) and bottom-side (right) diagram of<br />
+                                    Cross-sectional (left) and bottom-side (right) diagram of<br>
                                     proposed split-channel electrode design via concentric circles</p>
                             </div>
                         </a>
@@ -159,7 +159,7 @@
                             <div class="carousel-caption">
                                 <h3>Split Electrode Design - Semicircles</h3>
                                 <p>
-                                    Cross-sectional (left) and bottom-side (right) diagram of<br />
+                                    Cross-sectional (left) and bottom-side (right) diagram of<br>
                                     proposed split-channel electrode design via half circles</p>
                             </div>
                         </a>
