--- a/resume.html
+++ b/resume.html
@@ -45,15 +45,15 @@
                 </div>
                 <div class="col-sm-7">
                     <div class="inner-text">
-                        <strong>Carnegie Mellon University</strong> - Pittsburgh, PA<br />
-                        Bachelor of Science in Electrical and Computer Engineering<br />
+                        <strong>Carnegie Mellon University</strong> - Pittsburgh, PA<br>
+                        Bachelor of Science in Electrical and Computer Engineering<br>
                         Bachelor of Science in Music and Technology
                     </div>
                 </div>
                 <div class="col-sm-2">
                     <div class="inner-text">
-                    <br />
-                    <em>May 2017</em><br />
+                    <br>
+                    <em>May 2017</em><br>
                     <em>August 2017</em>
                 </div>
             </div>
@@ -65,13 +65,13 @@
                 </div>
                 <div class="col-sm-7">
                     <div class="inner-text">
-                        Certified Scrum Master <strong>(CSM)</strong><br />
-                        Certified Scrum Product Owner <strong>(CSPO)</strong><br />
+                        Certified Scrum Master <strong>(CSM)</strong><br>
+                        Certified Scrum Product Owner <strong>(CSPO)</strong><br>
                     </div>
                 </div>
                 <div class="col-sm-2">
                     <div class="inner-text">
-                        <em>January 2020</em><br />
+                        <em>January 2020</em><br>
                         <em>January 2020</em>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                         <!-- TODO: Define the iRobot work page -->
                         <a class="discrete-links" href="./work/irobot.html">
                             <strong>Software Engineer</strong>
-                        </a> at iRobot<br />
+                        </a> at iRobot<br>
                         <em>Robot Simulator Specialist</em>
                         <ul>
                             <li>Supported uptime of simulated robots in AWS Robomaker running 50 mission hours every
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col-sm-2">
                     <div class="inner-text">
-                        <br />
+                        <br>
                         <em>November 2019 - March 2020</em>
                     </div>
                 </div>
@@ -267,9 +267,9 @@
                 </div>
                 <div class="col-sm-9">
                     <div class="inner-text">
-                        <strong><u>Technologies:</u></strong> Python, C/C++, Bash, MaxMSP, SQL (Presto)<br />
-                        <strong><u>Interfaces:</u></strong> MATLAB, EAGLE, ROS, Pytest, OSC<br />
-                        <strong><u>Tools:</u></strong> Git, Pylint, Regex, Sphinx, JIRA<br />
+                        <strong><u>Technologies:</u></strong> Python, C/C++, Bash, MaxMSP, SQL (Presto)<br>
+                        <strong><u>Interfaces:</u></strong> MATLAB, EAGLE, ROS, Pytest, OSC<br>
+                        <strong><u>Tools:</u></strong> Git, Pylint, Regex, Sphinx, JIRA<br>
                         <strong><u>Audio:</u></strong> Ableton Live, Pro Tools, Audacity, MuseScore, Reason
                     </div>
                 </div>
