--- a/projects/orchestration-final-project.html
+++ b/projects/orchestration-final-project.html
@@ -52,8 +52,8 @@
                         for each instrument, this class also explored modern sampling libraries (eg.
                         <a href="http://www.spitfireaudio.com/shop/a-z/albion-one/" target="_blank">Spitfire Audio's Albion One</a>) and audio editing
                         software (eg. <a href="https://www.ableton.com/en/live/" target="_blank">Ableton Live</a>) since modern orchestrators tend to
-                        synthesize their projects as high quality as possible before getting a live orchestra to play and record the symphonic work.<br />
-                        <br />
+                        synthesize their projects as high quality as possible before getting a live orchestra to play and record the symphonic work.<br>
+                        <br>
                         With this knowledge and practice, I completed a final project that took the basics of a melody line (created by the
                         professor), and transformed it to a large, 34-part orchestral work. Below are links to the
                         <strong><a href="../documents/resume-website/final-project-orchestration.pdf">Sheet Music</a></strong> and a
