Adding more TODOs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
+        <!-- TODO: Change relative local references to root (/) references throughout -->
         <link rel="shortcut icon" href="./favicon.ico">
+        <!-- TODO: Change favicon.ico to svg -->
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -26,6 +28,7 @@
         <nav class="navbar">
             <!-- Just to create some header row space -->
         </nav>
+        <!-- TODO: Evaluate usage of <i> and <em> throughout -->
         <section class="container">
             <div class="jumbotron">
                 <h1>David A. Buzzell</h1>
