--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- TODO: move to projects/index.html -->
 <html lang="en">
     <head>
         <!-- Primary Meta Content -->
@@ -55,6 +55,7 @@
                     <h3 class="centered-head">Music and Technology Capstone</h3>
                     <div class="overlay-box">
                         <a href="./projects/music-tech-capstone.html">
+                            <!-- TODO: Add src, alt, width, and height attributes to img throughout -->
                             <img src="./images/project1.jpg" class="img-thumbnail" alt="Project 1">
                             <div class="overlay">
                                 <div class="text">
