--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                 <figure class="col-md-6">
                     <div class="overlay-box">
                         <a href="./resume.html">
+                            <!-- TODO: Convert to Progressive JPGs -->
+                            <!-- TODO: Shrink to 444x250 resolution -->
                             <img src="./images/homeimg.jpg" class="img-thumbnail" alt="Resume Website">
                             <div class="overlay">
                                 <div class="homeimg-text">
