Switch to en-US for all html langs

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en-US">
     <head>
         <!-- Primary Meta Content -->
         <meta charset="utf-8">
