--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- TODO: move to projects/index.html -->
-<html lang="en">
+<html lang="en-US">
     <head>
         <!-- Primary Meta Content -->
         <meta charset="utf-8">
