--- a/projects/hybrid-instruments.html
+++ b/projects/hybrid-instruments.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en-US">
     <head>
         <!-- Primary Meta Content -->
         <meta charset="utf-8">
