--- a/work/student-life.html
+++ b/work/student-life.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en-US">
     <head>
         <!-- Primary Meta Content -->
         <meta charset="utf-8">
