add dir="ltr" for all heads

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en-US">
+<html lang="en-US" dir="ltr">
     <head>
         <!-- Primary Meta Content -->
         <meta charset="utf-8">
