--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <!-- Welcome to my Online Resume Website! The main framework for this website is Bootstrap, but all of the other
      HTML/CSS/JS files have been designed solely by myself, using only online tutorials and classes for reference. -->
 
-<!-- TODO: add dir="ltr" for all heads -->
 <!-- TODO: change titles to David A. Buzzell for all html pages -->
 <!-- TODO: expand description on each page -->
 <!-- TODO: use main/header/footer/article/section/asides when appropriate -->
-<html lang="en-US">
+<html lang="en-US" dir="ltr">
     <head>
         <!-- Primary Meta Content -->
         <meta charset="utf-8">
