--- a/projects/ece-capstone.html
+++ b/projects/ece-capstone.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en-US">
+<html lang="en-US" dir="ltr">
     <head>
         <!-- Primary Meta Content -->
         <meta charset="utf-8">
