--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <!-- TODO: use main/header/footer/article/section/asides when appropriate -->
 <html lang="en-US" dir="ltr">
     <head>
+        <!-- TODO: copy head across all html files (hint: use PHP)
+             https://stackoverflow.com/a/44916840 -->
         <!-- Primary Meta Content -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,12 +18,16 @@
         <!-- Unordered Meta Content -->
         <title>David A. Buzzell</title>
         <meta name="author" content="David Buzzell">
+        <!-- TODO: drop keywords field, it isn't used anymore -->
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
         <!-- TODO: Change relative local references to root (/) references throughout -->
         <link rel="shortcut icon" href="./favicon.ico">
         <!-- TODO: Change favicon.ico to svg -->
 
+        <!-- TODO: Use more meta fields:
+             https://ogp.me/
+             https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/abouts-cards -->
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
@@ -95,6 +101,8 @@
         </section>
 
         <!-- Load scripts after everything else in the document -->
+        <!-- TODO: lolnope, see "Script Loading Strategies":
+             https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript#Comments -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </body>
