--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 
 <!-- Welcome to my Online Resume Website! The main framework for this website is Bootstrap, but all of the other
-     HTML/CSS/JS files have been designed solely by myself, using only online tutorials and classes for reference. -->
+     HTML/CSS/JS files have been designed solely by myself, using only online tutorials and classes for reference.
+
+     Validated by https://validator.w3.org/nu/ -->
+<!-- TODO: validate all HTML pages -->
 
 <!-- TODO: change titles to David A. Buzzell for all html pages -->
 <!-- TODO: expand description on each page -->
