--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
      HTML/CSS/JS files have been designed solely by myself, using only online tutorials and classes for reference.
 
      Validated by https://validator.w3.org/nu/ -->
-<!-- TODO: validate all HTML pages -->
+<!-- TODO: validate programmatically:
+           https://github.com/validator/validator/wiki/Service-%C2%BB-Input-%C2%BB-POST-body -->
 
 <!-- TODO: change titles to David A. Buzzell for all html pages -->
 <!-- TODO: expand description on each page -->
