--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+<!-- Validated by https://validator.w3.org/nu/ -->
 <!-- TODO: move to projects/index.html -->
 <html lang="en-US" dir="ltr">
     <head>
