--- a/projects/non-contact-eeg.html
+++ b/projects/non-contact-eeg.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<!-- Validated by https://validator.w3.org/nu/ -->
 <html lang="en-US" dir="ltr">
     <head>
         <!-- Primary Meta Content -->
